comment: --sun-misc-unsafe-memory-access=allow